Creacion de controladores y vistas de cliente con Entityframework

--- a/EvaluacionP1_BurgaMartin/appsettings.json
+++ b/EvaluacionP1_BurgaMartin/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EvaluacionP1_SQLserver": "Server=(localdb)\\mssqllocaldb;Database=EvaluacionP1_SQLserver-b3562b40-de3a-4c1b-9075-e4c2c21c2a96;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
