Migracion de base de datos y establecimiento de nombre de la misma a "Martin Burga"

--- a/EvaluacionP1_BurgaMartin/appsettings.json
+++ b/EvaluacionP1_BurgaMartin/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "EvaluacionP1_SQLserver": "Server=localhost;Database=MartinBurga;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "EvaluacionP1_SQLserver": "Server=(localdb)\\mssqllocaldb;Database=EvaluacionP1_SQLserver-b3562b40-de3a-4c1b-9075-e4c2c21c2a96;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
 }
