Creacion de controlador de PlanRecompensas y las distintas vistas con EntityFramework

--- a/EvaluacionP1_BurgaMartin/appsettings.json
+++ b/EvaluacionP1_BurgaMartin/appsettings.json
@@ -1,12 +1,13 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "EvaluacionP1_SQLserver": "Server=localhost;Database=MartinBurga;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EvaluacionP1_SQLserver": "Server=localhost;Database=MartinBurga;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "EvaluacionP1_SQL_PlanRecompensas": "Server=(localdb)\\mssqllocaldb;Database=EvaluacionP1_SQL_PlanRecompensas-65b0b30b-6cf5-48bb-81b1-43436f7e4f56;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
