Creacion de controlador de Reservas y las distintas vistas con EntityFramework

--- a/EvaluacionP1_BurgaMartin/appsettings.json
+++ b/EvaluacionP1_BurgaMartin/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "EvaluacionP1_SQLserver": "Server=localhost;Database=MartinBurga;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
-    "EvaluacionP1_SQL_PlanRecompensas": "Server=(localdb)\\mssqllocaldb;Database=EvaluacionP1_SQL_PlanRecompensas-65b0b30b-6cf5-48bb-81b1-43436f7e4f56;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "EvaluacionP1_SQL_PlanRecompensas": "Server=(localdb)\\mssqllocaldb;Database=EvaluacionP1_SQL_PlanRecompensas-65b0b30b-6cf5-48bb-81b1-43436f7e4f56;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "EvaluacionP1_SQL_Reservas": "Server=(localdb)\\mssqllocaldb;Database=EvaluacionP1_SQL_Reservas-7b3c27b5-674f-4ec9-b02d-bdfece07e903;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
